[gd_scene load_steps=5 format=3 uid="uid://bpwtnk2j8dehw"]

[ext_resource type="Script" uid="uid://dbc0i4j0u12vm" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://iu2yiboprq3d" path="res://mathquest/Background_16_9_blend.png" id="2_2wh52"]
[ext_resource type="Texture2D" uid="uid://c4muljuwprhr2" path="res://mathquest/Intro.png" id="3_ow34m"]
[ext_resource type="PackedScene" uid="uid://dcuo41eqpeu4n" path="res://scenes/ui/UIAudio.tscn" id="4_ow34m"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2wh52")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ow34m")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 143.0
offset_right = 54.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Iniciar"

[node name="Controles" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controles"

[node name="ReviewButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Avalie-nos!"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="UIAudio" parent="." instance=ExtResource("4_ow34m")]

[node name="ControlsLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="ColorRect" parent="ControlsLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.011764706, 0.011764706, 0.011764706, 0.88235295)

[node name="Panel" type="Panel" parent="ControlsLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -101.0
offset_right = 200.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ControlsLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 30.0
grow_horizontal = 2
text = "CONTROLES"
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ControlsLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.75
offset_top = -59.25
offset_right = 177.75
offset_bottom = 59.25
grow_horizontal = 2
grow_vertical = 2
text = "Movimento: WASD ou Setinhas

Interagir: E

Fechar Jogo / Sair do Quiz: Esc"

[node name="CloseButton" type="Button" parent="ControlsLayer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -31.0
offset_right = 27.5
grow_horizontal = 2
grow_vertical = 0
text = "Voltar"
